# hasura-cli-track

./: .gitignore  Cargo.toml  README.md  plugin.yaml
.github/workflows/: main.yml
scripts/: generate_manifest.sh  template-manifest.yaml
src/: cli.rs  hasura.rs  main.rs
src/commands/: mod.rs  relationships.rs  tables.rs
src/hasura/: client.rs  mod.rs  request.json  sql.rs
